# aaac

./: .gitignore  Cargo.toml  README.md  config.toml
aaac-core/: Cargo.toml
aaac-core/src/: main.rs
aaac-interface/: Cargo.toml
aaac-interface/src/: lib.rs
modules/aaac-dummymodule/: Cargo.toml
modules/aaac-dummymodule/src/: lib.rs
modules/aaac-filescan/: Cargo.toml
